Update project for responsive.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 <body>
   <header>
-    <h1><img src="./assets/logo.svg" style="color: white;" alt="Logo"> GQD Team</h1>
+    <h1><img src="./assets/logo.svg" alt="Logo"> GQD Team</h1>
+    <div class="menu-toggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <nav>
       <ul>
         <li><a href="#about">Sobre Mim</a></li>
