Update project for menu burger.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p>&copy; 2024 GQD Team. Todos os direitos reservados. | Desenvolvido por <a href="https://www.linkedin.com/in/rodrigocavalcantedebarros/">Rodrigo</a></p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
