--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>GQD Team</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="halter-icon.png" type="image/png">
+  <link rel="icon" href="./assets/logo.svg" type="image/png">
 </head>
 
 <body>
